CHANGED CODE AND REMOV E FILE

--- a/instrumentcluster/project/resources.qrc
+++ b/instrumentcluster/project/resources.qrc
@@ -2,10 +2,11 @@
     <qresource prefix="/">
         <file>Main.qml</file>
         <file>Cluster.qml</file>
-        <file>dialcontrol.qml</file>
     </qresource>
     <qresource prefix="/images">
-        <file>framefinal.png</file>
+        <file>framefffinal.png</file>
         <file>needle.png</file>
+        <file>needle_battery.png</file>
+
     </qresource>
 </RCC>
