Add Low_Battery WARNING!!

--- a/instrumentcluster/project/resources.qrc
+++ b/instrumentcluster/project/resources.qrc
@@ -8,6 +8,7 @@
         <file>framefffinal.png</file>
         <file>needle.png</file>
         <file>needle_battery.png</file>
+        <file>low_battery.png</file>
     
 
 
